--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -8,13 +8,13 @@
         <h1>My Todo List</h1>
         <div id="todo-table">
             <form>
-                <input type="text" name="item" placeholder="Add New Item..." />
+                <input type="text" name="item" placeholder="Add New Item..." required />
                 <button type="submit">Add Item</button>
             </form>
             <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
+                <% for (var i=0; i < todos.length; i++){ %>
+                    <li><%= todos[i].item %></li>
+                <% }; %>
             </ul>
         </div>
     </body>
